--- a/Experimentos_2021_P1.ipynb
+++ b/Experimentos_2021_P1.ipynb
@@ -90,52 +90,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "##############################################################\n",
+      "Lista:  Iris\n",
       "Número de ejemplos:  150\n",
       "Número de atributos:  4\n",
       "Número de clases:  3\n",
-      "Ratio de desequilibro:  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2]\n",
+      "Ratio de desequilibro: 1.00\n",
+      "##############################################################\n",
+      "##############################################################\n",
+      "Lista:  Digits\n",
       "Número de ejemplos:  1797\n",
       "Número de atributos:  64\n",
       "Número de clases:  10\n",
-      "Ratio de desequilibro:  [0 1 2 ... 8 9 8]\n",
+      "Ratio de desequilibro: 0.95\n",
+      "##############################################################\n",
+      "##############################################################\n",
+      "Lista:  Wine\n",
       "Número de ejemplos:  178\n",
       "Número de atributos:  13\n",
       "Número de clases:  3\n",
-      "Ratio de desequilibro:  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n",
+      "Ratio de desequilibro: 0.68\n",
+      "##############################################################\n",
+      "##############################################################\n",
+      "Lista:  Cancer\n",
       "Número de ejemplos:  569\n",
       "Número de atributos:  30\n",
       "Número de clases:  2\n",
-      "Ratio de desequilibro:  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 1 0 0 0 0 0 0 0 0 1 0 1 1 1 1 1 0 0 1 0 0 1 1 1 1 0 1 0 0 1 1 1 1 0 1 0 0\n",
-      " 1 0 1 0 0 1 1 1 0 0 1 0 0 0 1 1 1 0 1 1 0 0 1 1 1 0 0 1 1 1 1 0 1 1 0 1 1\n",
-      " 1 1 1 1 1 1 0 0 0 1 0 0 1 1 1 0 0 1 0 1 0 0 1 0 0 1 1 0 1 1 0 1 1 1 1 0 1\n",
-      " 1 1 1 1 1 1 1 1 0 1 1 1 1 0 0 1 0 1 1 0 0 1 1 0 0 1 1 1 1 0 1 1 0 0 0 1 0\n",
-      " 1 0 1 1 1 0 1 1 0 0 1 0 0 0 0 1 0 0 0 1 0 1 0 1 1 0 1 0 0 0 0 1 1 0 0 1 1\n",
-      " 1 0 1 1 1 1 1 0 0 1 1 0 1 1 0 0 1 0 1 1 1 1 0 1 1 1 1 1 0 1 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 1 1 0 1 0 0 1 1 1 1 1 1 1 1 1 1 1 1\n",
-      " 1 0 1 1 0 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 1 1 1 0 1 0 1 1 1 1 0 0 0 1 1\n",
-      " 1 1 0 1 0 1 0 1 1 1 0 1 1 1 1 1 1 1 0 0 0 1 1 1 1 1 1 1 1 1 1 1 0 0 1 0 0\n",
-      " 0 1 0 0 1 1 1 1 1 0 1 1 1 1 1 0 1 1 1 0 1 1 0 0 1 1 1 1 1 1 0 1 1 1 1 1 1\n",
-      " 1 0 1 1 1 1 1 0 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 0 1 0 0 1 0 1 1 1 1 1 0 1 1\n",
-      " 0 1 0 1 1 0 1 0 1 1 1 1 1 1 1 1 0 0 1 1 1 1 1 1 0 1 1 1 1 1 1 1 1 1 1 0 1\n",
-      " 1 1 1 1 1 1 0 1 0 1 1 0 1 1 1 1 1 0 0 1 0 1 0 1 1 1 1 1 0 1 1 0 1 0 1 0 0\n",
-      " 1 1 1 0 1 1 1 1 1 1 1 1 1 1 1 0 1 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-      " 1 1 1 1 1 1 1 0 0 0 0 0 0 1]\n"
+      "Ratio de desequilibro: 0.59\n",
+      "##############################################################\n"
      ]
     }
    ],
@@ -147,6 +136,7 @@
     "\n",
     "'''\n",
     "%matplotlib inline\n",
+    "#Creamos las 4 funciones para la carga de datos\n",
     "from sklearn import datasets\n",
     "def carga_datos1():\n",
     "    return datasets.load_iris()\n",
@@ -156,15 +146,31 @@
     "    return datasets.load_wine()\n",
     "def carga_datos4():\n",
     "    return datasets.load_breast_cancer()\n",
-    "\n",
+    "#Creamos una lista para la carga de datos y otra para los nombres\n",
     "lista_carga_datos = [carga_datos1, carga_datos2, carga_datos3,carga_datos4]\n",
-    "\n",
+    "nombre_listas =[ \"Iris\", \"Digits\", \"Wine\",  \"Cancer\"]\n",
+    "i = 0\n",
+    "#Generamos todos los datos pedidos\n",
     "for f in lista_carga_datos:\n",
+    "    print(\"##############################################################\")\n",
+    "    print(\"Lista: \" , nombre_listas[i])\n",
+    "    i=i+1\n",
     "    datos = f()\n",
     "    print(\"Número de ejemplos: \" , len(datos.data))\n",
     "    print(\"Número de atributos: \" , len(datos.feature_names))\n",
     "    print(\"Número de clases: \" , len(datos.target_names))\n",
-    "    print(\"Ratio de desequilibro: \" , datos.target)"
+    "    #Creamos\n",
+    "    countCl = {}\n",
+    "    for element in datos.target:\n",
+    "        if element in countCl:\n",
+    "            countCl[element] = countCl[element] + 1\n",
+    "        else:\n",
+    "            countCl[element] = 1\n",
+    "    all_values = countCl.values()\n",
+    "    max_value = max(all_values)\n",
+    "    min_value = min(all_values)\n",
+    "    print(\"Ratio de desequilibro: %0.2f\" % (min_value/max_value))\n",
+    "    print(\"##############################################################\")"
    ]
   },
   {
@@ -205,10 +211,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##############################################################\n",
+      "Lista:  Iris\n",
+      "0.9666666666666668\n",
+      "0.54\n",
+      "0.9466666666666667\n",
+      "0.5544\n",
+      "0.3256182074673856\n",
+      "0.3225607248900085\n",
+      "##############################################################\n",
+      "Lista:  Digits\n",
+      "0.9349133395233673\n",
+      "0.5237028359247043\n",
+      "0.9326942123181678\n",
+      "0.9133081048942004\n",
+      "0.76560911334425\n",
+      "0.5065567550630679\n",
+      "##############################################################\n",
+      "Lista:  Wine\n",
+      "0.9720634920634922\n",
+      "0.15603526907874732\n",
+      "0.9722222222222221\n",
+      "0.021675889328063257\n",
+      "0.3130276805616542\n",
+      "0.183425405594257\n",
+      "##############################################################\n",
+      "Lista:  Cancer\n",
+      "0.9666200900481291\n",
+      "0.6036754404448733\n",
+      "0.95960254618848\n",
+      "0.7137151766630405\n",
+      "0.8084850808461592\n",
+      "0.7046861734644334\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Random Forest (100)</th>\n",
+       "      <th>Decision Tree (5)</th>\n",
+       "      <th>Random Forest(50)</th>\n",
+       "      <th>Neighbors regresor(5)</th>\n",
+       "      <th>Gradient Boosting(1)</th>\n",
+       "      <th>Linear regression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Iris</th>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.540000</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.554400</td>\n",
+       "      <td>0.325618</td>\n",
+       "      <td>0.322561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Digits</th>\n",
+       "      <td>0.934913</td>\n",
+       "      <td>0.523703</td>\n",
+       "      <td>0.932694</td>\n",
+       "      <td>0.913308</td>\n",
+       "      <td>0.765609</td>\n",
+       "      <td>0.506557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wine</th>\n",
+       "      <td>0.972063</td>\n",
+       "      <td>0.156035</td>\n",
+       "      <td>0.972222</td>\n",
+       "      <td>0.021676</td>\n",
+       "      <td>0.313028</td>\n",
+       "      <td>0.183425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cancer</th>\n",
+       "      <td>0.966620</td>\n",
+       "      <td>0.603675</td>\n",
+       "      <td>0.959603</td>\n",
+       "      <td>0.713715</td>\n",
+       "      <td>0.808485</td>\n",
+       "      <td>0.704686</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Random Forest (100)  Decision Tree (5)  Random Forest(50)  \\\n",
+       "Iris               0.966667           0.540000           0.946667   \n",
+       "Digits             0.934913           0.523703           0.932694   \n",
+       "Wine               0.972063           0.156035           0.972222   \n",
+       "Cancer             0.966620           0.603675           0.959603   \n",
+       "\n",
+       "        Neighbors regresor(5)  Gradient Boosting(1)  Linear regression  \n",
+       "Iris                 0.554400              0.325618           0.322561  \n",
+       "Digits               0.913308              0.765609           0.506557  \n",
+       "Wine                 0.021676              0.313028           0.183425  \n",
+       "Cancer               0.713715              0.808485           0.704686  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "import pandas as pd\n",
+    "#Definimos una función para cada algoritmo\n",
+    "def alg_1():\n",
+    "    return RandomForestClassifier(n_estimators = 100)\n",
+    "def alg_2():\n",
+    "    return DecisionTreeRegressor(max_depth=5)\n",
+    "def alg_3():\n",
+    "    return RandomForestClassifier(n_estimators = 50)\n",
+    "def alg_4():\n",
+    "    return KNeighborsRegressor(5)\n",
+    "def alg_5():\n",
+    "    return GradientBoostingRegressor(random_state=1)\n",
+    "def alg_6():\n",
+    "    return LinearRegression()\n",
+    "#Lista de algoritmos y lista de nombres\n",
+    "lista_carga_algoritmos = [alg_1, alg_2,alg_3,alg_4, alg_5, alg_6]\n",
+    "lista_nombre_algoritmos = [\"Random Forest (100)\" ,  \"Decision Tree (5)\",  \"Random Forest(50)\" ,\n",
+    "                           \"Neighbors regresor(5)\",  \"Gradient Boosting(1)\",  \"Linear regression\"]\n",
+    "i = 0\n",
+    "#Lista para meter todos los datos\n",
+    "lista =[]\n",
+    "for f in lista_carga_datos:\n",
+    "    \n",
+    "    print(\"##############################################################\")\n",
+    "    print(\"Lista: \" , nombre_listas[i])\n",
+    "    i=i+1\n",
+    "    datos = f()\n",
+    "    #Obtenemos los datos de la lista de carga de datos\n",
+    "    X = datos.data\n",
+    "    y = datos.target\n",
+    "    tplList = []\n",
+    "    #Recorremos los algoritmos\n",
+    "    for a in lista_carga_algoritmos:\n",
+    "        model = a()\n",
+    "        scores = cross_val_score(model, X, y, cv=5)\n",
+    "        print(scores.mean())\n",
+    "        #Añadimos a la lista de valores\n",
+    "        tplList.append(scores.mean())\n",
+    "    #Añadimos a la lista global la lista para esa fila\n",
+    "    lista.append(tplList)\n",
+    "dfObj = pd.DataFrame(lista, columns = lista_nombre_algoritmos, index=nombre_listas)\n",
+    "dfObj"
+   ]
   },
   {
    "cell_type": "code",
@@ -325,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -349,64 +531,103 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Método 1</th>\n",
-       "      <th>Método 2</th>\n",
-       "      <th>Método 3</th>\n",
+       "      <th>Random Forest (100)</th>\n",
+       "      <th>Decision Tree (5)</th>\n",
+       "      <th>Random Forest(50)</th>\n",
+       "      <th>Neighbors regresor(5)</th>\n",
+       "      <th>Gradient Boosting(1)</th>\n",
+       "      <th>Linear regression</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <th>Iris</th>\n",
        "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>Digits</th>\n",
        "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>Wine</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cancer</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Método 1  Método 2  Método 3\n",
-       "0       3.0       2.0       1.0\n",
-       "1       1.0       2.0       3.0\n",
-       "2       1.0       2.0       3.0\n",
-       "3       1.5       1.5       3.0"
+       "        Random Forest (100)  Decision Tree (5)  Random Forest(50)  \\\n",
+       "Iris                    1.0                4.0                2.0   \n",
+       "Digits                  1.0                5.0                2.0   \n",
+       "Wine                    2.0                5.0                1.0   \n",
+       "Cancer                  1.0                6.0                2.0   \n",
+       "\n",
+       "        Neighbors regresor(5)  Gradient Boosting(1)  Linear regression  \n",
+       "Iris                      3.0                   5.0                6.0  \n",
+       "Digits                    3.0                   4.0                6.0  \n",
+       "Wine                      6.0                   3.0                4.0  \n",
+       "Cancer                    4.0                   3.0                5.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# En pandas hay un método rank que nos facilita mucho el trabajo\n",
-    "df_results.rank(axis=1, ascending = False)"
+    "#Creamos un ranking con las puntuaciones\n",
+    "rank = dfObj.rank(axis=1, ascending = False)\n",
+    "rank"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El mejor algoritmo es:  Random Forest (100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "minMean = 100\n",
+    "algName = \"\"\n",
+    "#El que tenga la media más baja será el mejor\n",
+    "for columnName, columnData in rank.iteritems():\n",
+    "   if(columnData.mean()<minMean):\n",
+    "        algName = columnName\n",
+    "        minMean = columnData.mean()\n",
+    "print(\"El mejor algoritmo es: \", algName)"
+   ]
   }
  ],
  "metadata": {
