--- a/Experimentos_2021_P1.ipynb
+++ b/Experimentos_2021_P1.ipynb
@@ -159,7 +159,7 @@
     "    print(\"Número de ejemplos: \" , len(datos.data))\n",
     "    print(\"Número de atributos: \" , len(datos.feature_names))\n",
     "    print(\"Número de clases: \" , len(datos.target_names))\n",
-    "    #Creamos\n",
+    "    #Creamos un diccionario para contar las clases\n",
     "    countCl = {}\n",
     "    for element in datos.target:\n",
     "        if element in countCl:\n",
